fixing layout issues

--- a/Assets/games/Jardinance/style.css
+++ b/Assets/games/Jardinance/style.css
@@ -20,7 +20,6 @@ main {
 
 canvas {
     outline: 1px solid whitesmoke;
-    /* background-color: #00ff21; */
     max-width: 610px;
     width: 100vw;
     height: calc(100vh - 20px);
@@ -59,13 +58,8 @@ canvas {
 }
 
 @media (width < 768px) {
-    main {
-        min-height: 90vh;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
     canvas {
+        height: 90vh;
         outline: none;
     }
 }
